updating comming soon status

--- a/index.html
+++ b/index.html
@@ -34,12 +34,24 @@
                 <svg width="100%" height="100%" id="unipolar-nrz-l-svg">
                 </svg>
             </div>
-            <div id="polar-nrz-i"></div>
-            <div id="polar-rz"></div>
-            <div id="manchester"></div>
-            <div id="diff-manchester"></div>
-            <div id="ami"></div>
-            <div id="pseudoternary"></div>
+            <div id="polar-nrz-i">
+                Comming Soon...
+            </div>
+            <div id="polar-rz">
+                Comming Soon...
+            </div>
+            <div id="manchester">
+                Comming Soon...
+            </div>
+            <div id="diff-manchester">
+                Comming Soon...
+            </div>
+            <div id="ami">
+                Comming Soon...
+            </div>
+            <div id="pseudoternary">
+                Comming Soon...
+            </div>
         </div>
     </div>
 
