refactor: using async-await function instead of settimeout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 Differential Manchester, AMI, and Pseudoternary line encoding techniques.</p>
         </div>
         <div class="input-button-container">
-            <input type="text" class="input-box" placeholder="Enter Digital Bit Sequence...">
+            <input type="text" class="input-box" placeholder="Enter Digital Bit Sequence..." autofocus>
             <button class="generate-btn">Generate</button>
         </div>
 
@@ -26,30 +26,38 @@
             <div>Wave form are as follows</div>
             <div id="input-bits"></div>
             <div id="unipolar-nrz">
-                This is Unipolar NRZ Line wave
+                Unipolar NRZ Line wave
                 <svg width="100%" id="unipolar-nrz-svg">
                 </svg>
             </div>
             <div id="polar-nrz-l">
-                <svg width="100%" height="100%" id="unipolar-nrz-l-svg">
+                Polar NRZ-L Line wave
+                <svg width="100%" height="100%" id="polar-nrz-l-svg">
                 </svg>
             </div>
             <div id="polar-nrz-i">
-                Comming Soon...
+                Polar NRZ-I Line wave
+                <svg width="100%" height="100%" id="polar-nrz-i-svg">
+                </svg>
             </div>
             <div id="polar-rz">
+                Polar RZ Line wave
                 Comming Soon...
             </div>
             <div id="manchester">
+                Manchester Line wave
                 Comming Soon...
             </div>
             <div id="diff-manchester">
+                Diff-Manchester Line wave
                 Comming Soon...
             </div>
             <div id="ami">
+                AMI Line wave
                 Comming Soon...
             </div>
             <div id="pseudoternary">
+                Pseudoternary Line wave
                 Comming Soon...
             </div>
         </div>
