refactor: adding icon and meta data

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="./logo.png" />
+    <meta property="og:title" content="Line Encoding developed by malivinayak" />
+    <link rel="icon" href="./logo.png" />
     <title>Line Encoding Waves</title>
     <link rel="stylesheet" href="style.css">
 </head>
