refactor: renaming the title

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="./logo.png" />
-    <meta property="og:title" content="Line Encoding developed by malivinayak" />
+    <meta property="og:title" content="Line Coding by @malivinayak" />
     <link rel="icon" href="./logo.png" />
-    <title>Line Encoding Waves</title>
+    <title>Line Coding Waves</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1 class="heading">Line Encoding Waves</h1>
+        <h1 class="heading">Line Coding Waves</h1>
         <div class="lines">
             <p>Line encoding is the process of converting digital data into analog signals suitable for transmission
                 over communication channels. </p>
