--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="input-bits"></div>
             <div id="unipolar-nrz">
                 Unipolar NRZ Line wave
-                <svg width="100%" id="unipolar-nrz-svg">
+                <svg width="100%" height="120" id="unipolar-nrz-svg">
                 </svg>
             </div>
             <div id="polar-nrz-l">
@@ -45,7 +45,8 @@
             </div>
             <div id="polar-rz">
                 Polar RZ Line wave
-                Comming Soon...
+                <svg width="100%" height="100%" id="polar-rz-svg">
+                </svg>
             </div>
             <div id="manchester">
                 Manchester Line wave
