feat: Manchester Line wave

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             </div>
             <div id="manchester">
                 Manchester Line wave
-                Comming Soon...
+                <svg width="100%" height="100%" id="manchester-svg">
+                </svg>
             </div>
             <div id="diff-manchester">
                 Diff-Manchester Line wave
