--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             </div>
             <div id="diff-manchester">
                 Diff-Manchester Line wave
-                Comming Soon...
+                <svg width="100%" height="100%" id="diff-manchester-svg">
+                </svg>
             </div>
             <div id="ami">
                 AMI Line wave
