--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             </div>
             <div id="ami">
                 AMI Line wave
-                Comming Soon...
+                <svg width="100%" height="100%" id="ami-svg">
+                </svg>
             </div>
             <div id="pseudoternary">
                 Pseudoternary Line wave
