--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             </div>
             <div id="pseudoternary">
                 Pseudoternary Line wave
-                Comming Soon...
+                <svg width="100%" height="100%" id="pseudoternary-svg">
+                </svg>
             </div>
         </div>
     </div>
