--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="input-bits"></div>
             <div id="unipolar-nrz">
                 Unipolar NRZ Line wave
-                <svg width="100%" height="120" id="unipolar-nrz-svg">
+                <svg width="100%" height="100%" id="unipolar-nrz-svg">
                 </svg>
             </div>
             <div id="polar-nrz-l">
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
