--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Differential Manchester, AMI, and Pseudoternary line encoding techniques.</p>
         </div>
         <div class="input-button-container">
-            <input type="text" class="input-box" placeholder="Enter Digital Bit Sequence..." autofocus>
+            <input type="text" class="input-box" placeholder="Enter Digital Bit Sequence [0's and 1's]..." autofocus>
             <button class="generate-btn">Generate</button>
         </div>
 
