refactor: remove display of input data

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div id="output-container">
             <div>Wave form are as follows</div>
-            <div id="input-bits"></div>
+            <!-- <div id="input-bits"></div> -->
             <div id="unipolar-nrz">
                 Unipolar NRZ Line wave
                 <svg width="100%" height="100%" id="unipolar-nrz-svg">
