--- a/index.html
+++ b/index.html
@@ -2,110 +2,118 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="./logo.png" />
-    <meta property="og:title" content="Line Coding by @malivinayak" />
-    <link rel="icon" href="./logo.png" />
-    <title>Line Coding Waves</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:image" content="./logo.png" />
+  <meta property="og:title" content="Line Coding by @malivinayak" />
+  <link rel="icon" href="./logo.png" />
+  <title>Line Coding Waves</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <nav class="navbar">
-        <div class="navbar-logo">
-            <img src="logo.png" alt="Logo">
-        </div>
-        <div class="navbar-links">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li class="dropdown">
-                    <a href="#">Coding Techniques</a>
-                    <ul class="dropdown-content">
-                        <li><a href="#">Unipolar NRZ</a></li>
-                        <li><a href="#">Polar NRZ-L</a></li>
-                        <li><a href="#">Polar NRZ-I</a></li>
-                        <li><a href="#">Polar RZ</a></li>
-                        <li><a href="#">Manchester</a></li>
-                        <li><a href="#">Differential Manchester</a></li>
-                        <li><a href="#">AMI</a></li>
-                        <li><a href="#">Pseudoternary</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="https://github.com/malivinayak/Line-Coding-Waves">
-                        Source code
-                        <svg class="github-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path fill="#000"
-                                d="M12 0a12 12 0 0 0-3.8 23c.6.1.8-.3.8-.6v-2.3c-3.3.7-4-1.6-4-1.6-.5-1.3-1.3-1.6-1.3-1.6-1-.7.1-.7.1-.7 1.2.1 1.9 1.3 1.9 1.3 1.1 1.8 2.8 1.3 3.5 1 .1-.7.4-1.3.7-1.6-2.5-.3-5.2-1.3-5.2-5.9 0-1.3.5-2.4 1.3-3.3-.1-.3-.6-1.6.1-3.3 0 0 1.1-.3 3.5 1.3a12 12 0 0 1 6.4 0c2.4-1.7 3.5-1.3 3.5-1.3.7 1.7.2 3 .1 3.3.8.9 1.3 2 1.3 3.3 0 4.6-2.7 5.6-5.2 5.9.4.4.8 1.1.8 2.3v3.4c0 .3.2.7.8.6A12 12 0 0 0 12 0z" />
-                        </svg>
-                    </a>
-                </li>
+  <section class="navigation">
+    <div class="nav-container">
+      <div class="brand">
+        <a href="#!">
+          logo
+        </a>
+      </div>
+      <nav>
+        <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+        <ul class="nav-list">
+          <li>
+            <a href="#!">Home</a>
+          </li>
+          <li>
+            <a href="#!">About</a>
+          </li>
+          <li>
+            <a href="#!">Coding Techniques</a>
+            <ul class="nav-dropdown">
+              <li><a href="#">Unipolar NRZ</a></li>
+              <li><a href="#">Polar NRZ-L</a></li>
+              <li><a href="#">Polar NRZ-I</a></li>
+              <li><a href="#">Polar RZ</a></li>
+              <li><a href="#">Manchester</a></li>
+              <li><a href="#">Differential Manchester</a></li>
+              <li><a href="#">AMI</a></li>
+              <li><a href="#">Pseudoternary</a></li>
             </ul>
-        </div>
-    </nav>
-
-    <div class="container">
-        <h1 class="heading">Line Coding Waves</h1>
-        <div class="lines">
-            <p>Line encoding is the process of converting digital data into analog signals suitable for transmission
-                over communication channels. </p>
-            <p>We will be generating waveforms for Unipolar NRZ, Polar NRZ-L, Polar NRZ-I, Polar RZ, Manchester,
-                Differential Manchester, AMI, and Pseudoternary line encoding techniques.</p>
-        </div>
-        <div class="input-button-container">
-            <input type="text" class="input-box" placeholder="Enter Digital Bit Sequence [0's and 1's]..." autofocus>
-            <button class="generate-btn">Generate</button>
-        </div>
-
-        <div id="output-container">
-            <div>Wave form are as follows</div>
-            <!-- <div id="input-bits"></div> -->
-            <div id="unipolar-nrz">
-                Unipolar NRZ Line wave
-                <svg width="100%" height="100%" id="unipolar-nrz-svg">
-                </svg>
-            </div>
-            <div id="polar-nrz-l">
-                Polar NRZ-L Line wave
-                <svg width="100%" height="100%" id="polar-nrz-l-svg">
-                </svg>
-            </div>
-            <div id="polar-nrz-i">
-                Polar NRZ-I Line wave
-                <svg width="100%" height="100%" id="polar-nrz-i-svg">
-                </svg>
-            </div>
-            <div id="polar-rz">
-                Polar RZ Line wave
-                <svg width="100%" height="100%" id="polar-rz-svg">
-                </svg>
-            </div>
-            <div id="manchester">
-                Manchester Line wave
-                <svg width="100%" height="100%" id="manchester-svg">
-                </svg>
-            </div>
-            <div id="diff-manchester">
-                Diff-Manchester Line wave
-                <svg width="100%" height="100%" id="diff-manchester-svg">
-                </svg>
-            </div>
-            <div id="ami">
-                AMI Line wave
-                <svg width="100%" height="100%" id="ami-svg">
-                </svg>
-            </div>
-            <div id="pseudoternary">
-                Pseudoternary Line wave
-                <svg width="100%" height="100%" id="pseudoternary-svg">
-                </svg>
-            </div>
-        </div>
+          </li>
+          <li>
+            <a href="https://github.com/malivinayak/Line-Coding-Waves">
+              Source code
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
+  </section>
 
-    <script src="./script.js"></script>
+  <div id="Hero">
+    <div class="container">
+      <h1 class="heading">Line Coding Waves</h1>
+      <div class="lines">
+        <p>Line encoding is the process of converting digital data into analog signals suitable for transmission
+          over communication channels. </p>
+        <p>We will be generating waveforms for Unipolar NRZ, Polar NRZ-L, Polar NRZ-I, Polar RZ, Manchester,
+          Differential Manchester, AMI, and Pseudoternary line encoding techniques.</p>
+      </div>
+      <div class="input-button-container">
+            <input type="text" class="input-box" placeholder="Enter Digital Bit Sequence [0's and 1's]..." autofocus>
+        <button class="generate-btn">Generate</button>
+      </div>
+
+      <div id="output-container">
+        <div>Wave form are as follows</div>
+            <!-- <div id="input-bits"></div> -->
+        <div id="unipolar-nrz">
+          Unipolar NRZ Line wave
+          <svg width="100%" height="100%" id="unipolar-nrz-svg">
+          </svg>
+        </div>
+        <div id="polar-nrz-l">
+          Polar NRZ-L Line wave
+          <svg width="100%" height="100%" id="polar-nrz-l-svg">
+          </svg>
+        </div>
+        <div id="polar-nrz-i">
+          Polar NRZ-I Line wave
+          <svg width="100%" height="100%" id="polar-nrz-i-svg">
+          </svg>
+        </div>
+        <div id="polar-rz">
+          Polar RZ Line wave
+          <svg width="100%" height="100%" id="polar-rz-svg">
+          </svg>
+        </div>
+        <div id="manchester">
+          Manchester Line wave
+          <svg width="100%" height="100%" id="manchester-svg">
+          </svg>
+        </div>
+        <div id="diff-manchester">
+          Diff-Manchester Line wave
+          <svg width="100%" height="100%" id="diff-manchester-svg">
+          </svg>
+        </div>
+        <div id="ami">
+          AMI Line wave
+          <svg width="100%" height="100%" id="ami-svg">
+          </svg>
+        </div>
+        <div id="pseudoternary">
+          Pseudoternary Line wave
+          <svg width="100%" height="100%" id="pseudoternary-svg">
+          </svg>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="./script.js"></script>
 </body>
 
 </html>
