refactor: add Developed by @malivinayak

--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
                 </svg>
             </div>
         </div>
+        <br>
+        <br>
+        <div style="text-align: right;">
+            Developed by <a href="https://github.com/malivinayak" target="_blank">@malivinayak</a>
+        </div>
     </div>
-
     <script src="./script.js"></script>
 </body>
 
